deps/v8/test/message/fail/modules-star-default.out
*modules-import4.js:8: SyntaxError: The requested module 'modules-import4.js' does not provide an export named 'c'
export {c as a} from "modules-import4.js";
        ^^^^^^
SyntaxError: The requested module 'modules-import4.js' does not provide an export named 'c'

